--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.5.0</version>
+				<executions>
+					<execution>
+					<goals>
+						<goal>java</goal>
+					</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>com.NONSENSE-generator\src\main\java\com\test\elementiIngegneria\ElementiIngegneriaApplication.java</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
